# blueprint-fullstack-app

backend_app/: pyproject.toml
backend_app/wb/: main.py
backend_app/wb/configs/: authorization_header_elements.py  configurations.py  dependencies.py  json_web_token.py  logger.py
backend_app/wb/configs/auth/: auth.py  authorization_header_elements.py  dependencies.py  json_web_token.py
frontend-app/: package-lock.json  package.json
frontend-app/src/: App.tsx  main.tsx
frontend-app/src/components/auth/: auth0Guards.tsx  auth0ProvierWithRoutes.tsx  loginButton.tsx  logoutButton.tsx  navbuttons.tsx  signUpButton.tsx
frontend-app/src/components/errorComponents/: errorPopup.tsx
frontend-app/src/components/header/: Header.tsx
frontend-app/src/components/navbar/: navbar.tsx
frontend-app/src/components/pageLoader/: pageLoader.tsx
frontend-app/src/components/utils/: useAPI.tsx
frontend-app/src/container/basic/: layout.tsx
frontend-app/src/i18n/: i18n.ts
frontend-app/src/i18n/locale/: en.json  pt.json
frontend-app/src/pages/: home.tsx  login.tsx  notfound.tsx  profile.tsx  test.tsx
frontend-app/src/routes/: routes.tsx
